...
  final String name;
  final List<PictureInfo> pictures;
}

const fox = PictureInfo(
  'fox',
  'Fox',
  asset: 'assets/pictures/fox.svg',
  palette: [
    PaletteColor(Color(0xFFFF8752), 'Orange'),
    PaletteColor(Color(0xFFD15124), 'Red'),
    PaletteColor(Color(0xFFE7EEF2), 'White'),
    PaletteColor(Color(0xFFA3B8BF), 'Gray'),
  ],
);

final categories = [
  Category('animals', 'Animals', [
    fox,
    PictureInfo(
      'owl',
      'Owl',
      asset: 'assets/pictures/owl.svg',
      palette: [
...
